fix(Hero and Card 5, Animated 5): realigned elements

--- a/pages/heroandcard5/assets/css/style.css
+++ b/pages/heroandcard5/assets/css/style.css
@@ -102,8 +102,8 @@ section.home {
     color : white;
     font-size: 100px;
     position: absolute;
-    top: 29%;
-    left: 11.5%;
+    top: 26%;
+    left: 18%;
 }
 
 #box5{
